--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2084,6 +2084,10 @@ textarea,
 }
 
 .w-100 {
+    width: 100%;
+}
+
+.w-100-imp {
     width: 100% !important;
 }
 
